--- a/index.html
+++ b/index.html
@@ -1,9 +1,33 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>My Portfolio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My Project Portfolio</title>
+  <style>
+    body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 1rem; }
+    .project { margin-bottom: 2rem; }
+    img { max-width: 100%; height: auto; }
+  </style>
 </head>
 <body>
-  <h1>Welcome to my Portfolio!</h1>
-  <p>More coming soon...</p>
+  <h1>My Projects</h1>
+
+  <div class="project">
+    <h2>📌 Project One</h2>
+    <img src="images/project1.png" alt="Screenshot of Project One">
+    <p>A brief description of what Project One does and why it’s cool.</p>
+    <p><a href="https://github.com/username/project-one">View on GitHub</a></p>
+  </div>
+
+  <div class="project">
+    <h2>📌 Project Two</h2>
+    <img src="images/project2.png" alt="Screenshot of Project Two">
+    <p>A brief description of Project Two with key features or learning points.</p>
+    <p><a href="https://github.com/username/project-two">View on GitHub</a></p>
+  </div>
+
+  <!-- Add more projects as needed -->
+
 </body>
 </html>
