--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <div class="project">
     <h2>📌 Project One</h2>
-    <img src="images/project1.png" alt="Screenshot of Project One">
+    <img src="images/1.jpeg" alt="Screenshot of Project One">
     <p>A brief description of what Project One does and why it’s cool.</p>
     <p><a href="https://github.com/username/project-one">View on GitHub</a></p>
   </div>
