--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Project Portfolio</title>
+  <title>Ameed Shubietah | Odoo Developer Portfolio</title>
   <style>
     body {
       margin: 0;
@@ -24,6 +24,29 @@
       margin: 0;
       font-size: 2.5rem;
       letter-spacing: 1px;
+    }
+
+    .intro {
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      text-align: center;
+      padding: 2rem;
+    }
+
+    .intro h2 {
+      font-size: 2rem;
+      color: #1f2937;
+      margin-bottom: 1rem;
+      letter-spacing: 0.5px;
+    }
+
+    .intro p {
+      font-size: 1.1rem;
+      color: #555;
     }
 
     main {
@@ -94,8 +117,13 @@
 <body>
 
   <header>
-    <h1>My Project Portfolio</h1>
+    <h1>Ameed Shubietah</h1>
   </header>
+
+  <section class="intro">
+    <h2>👋 Hi, I'm <span style="color:#2563eb; font-weight:bold;">Ameed Shubietah</span></h2>
+    <p>I'm an <strong>Odoo Developer</strong> with 2 years of hands‑on experience building and customizing modules in Odoo. I have a solid foundation in Python, PostgreSQL, and REST API integrations. I've delivered three freelance projects automating CRM, Sales, and Inventory workflows for SMEs, reducing manual data entry by up to 25 %. I'm quick-learning, detail-oriented, and an active contributor on the Odoo Community forums. I'm fluent in Arabic & English and open to both remote and on-premise opportunities.</p>
+  </section>
 
   <main>
     <div class="project">
@@ -103,7 +131,7 @@
       <div class="project-content">
         <h2>📌 Project One</h2>
         <p>A brief description of Project One highlighting its purpose or cool features.</p>
-        <a href="https://github.com/username/project-one" target="_blank">View on GitHub</a>
+        <a href="images/1.jpeg" target="_blank">Preview Image</a>
       </div>
     </div>
 
@@ -112,7 +140,7 @@
       <div class="project-content">
         <h2>📌 Project Two</h2>
         <p>A brief description of Project Two with key features or learning points.</p>
-        <a href="https://github.com/username/project-two" target="_blank">View on GitHub</a>
+        <a href="images/2.jpeg" target="_blank">Preview Image</a>
       </div>
     </div>
 
@@ -121,7 +149,7 @@
       <div class="project-content">
         <h2>📌 Project Three</h2>
         <p>A brief description of Project Three explaining its purpose or what you learned.</p>
-        <a href="https://github.com/username/project-three" target="_blank">View on GitHub</a>
+        <a href="images/3.jpeg" target="_blank">Preview Image</a>
       </div>
     </div>
 
@@ -130,7 +158,7 @@
       <div class="project-content">
         <h2>📌 Project Four</h2>
         <p>A brief description of Project Four outlining its unique aspects or technologies used.</p>
-        <a href="https://github.com/username/project-four" target="_blank">View on GitHub</a>
+        <a href="images/4.jpeg" target="_blank">Preview Image</a>
       </div>
     </div>
 
@@ -139,7 +167,7 @@
       <div class="project-content">
         <h2>📌 Project Five</h2>
         <p>A brief description of Project Five emphasizing the key ideas or solutions implemented.</p>
-        <a href="https://github.com/username/project-five" target="_blank">View on GitHub</a>
+        <a href="images/5.jpeg" target="_blank">Preview Image</a>
       </div>
     </div>
 
@@ -148,7 +176,7 @@
       <div class="project-content">
         <h2>📌 Project Six</h2>
         <p>A brief description of Project Six, describing what sets it apart or its challenges.</p>
-        <a href="https://github.com/username/project-six" target="_blank">View on GitHub</a>
+        <a href="images/6.jpeg" target="_blank">Preview Image</a>
       </div>
     </div>
 
@@ -157,7 +185,7 @@
       <div class="project-content">
         <h2>📌 Project Seven</h2>
         <p>A brief description of Project Seven, including what you learned or achieved.</p>
-        <a href="https://github.com/username/project-seven" target="_blank">View on GitHub</a>
+        <a href="images/7.jpeg" target="_blank">Preview Image</a>
       </div>
     </div>
 
@@ -166,7 +194,7 @@
       <div class="project-content">
         <h2>📌 Project Eight</h2>
         <p>A brief description of Project Eight, summarizing the project’s purpose and impact.</p>
-        <a href="https://github.com/username/project-eight" target="_blank">View on GitHub</a>
+        <a href="images/8.jpeg" target="_blank">Preview Image</a>
       </div>
     </div>
   </main>
