--- a/index.html
+++ b/index.html
@@ -112,13 +112,78 @@
       font-size: 0.9rem;
       color: #666;
     }
+    .hero {
+  background: #1f2937;
+  color: #fff;
+  text-align: center;
+  padding: 4rem 1rem 2rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.hero-content {
+  max-width: 600px;
+  margin: 0 auto;
+  background: #1f2937;
+  padding: 2rem;
+  border-radius: 16px;
+  box-shadow: 0 12px 24px rgba(0,0,0,0.3);
+}
+
+.profile-pic {
+  width: 160px;
+  height: 160px;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 4px solid #fff;
+  margin-bottom: 1rem;
+}
+
+.name {
+  font-size: 2.5rem;
+  margin: 0.5rem 0;
+  letter-spacing: 1px;
+  color: #fff;
+}
+
+.title {
+  font-size: 1.5rem;
+  margin: 0.5rem 0 1.5rem;
+  color: #93c5fd; /* light blue accent */
+}
+
+.contact-info p {
+  margin: 0.5rem 0;
+  font-size: 1rem;
+}
+
+.contact-info a {
+  color: #93c5fd;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+.contact-info a:hover {
+  color: #60a5fa;
+}
+
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>Ameed Shubietah</h1>
-  </header>
+  <header class="hero">
+  <div class="hero-content">
+    <img src="images/profile.jpeg" alt="Ameed Shubietah Photo" class="profile-pic">
+    <h1 class="name">Ameed Shubietah</h1>
+    <h2 class="title">Odoo Developer</h2>
+    <div class="contact-info">
+      <p>📧 <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+      <p>🌐 <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
+      <p>📍 Open to Remote & On-Premise Opportunities</p>
+    </div>
+  </div>
+</header>
+
 
   <section class="intro">
     <h2>👋 Hi, I'm <span style="color:#2563eb; font-weight:bold;">Ameed Shubietah</span></h2>
